# string-synth

./: configure.ac
src/: Makefile.am  play.c  rkstep.c  sim.c  simR.c  simR.h  simple_string.c  simple_string.h  string-filter.c  string-synth.c  string_filter.c  string_filter.h  test_string.c  tine.c
